--- a/client/package.json
+++ b/client/package.json
@@ -18,12 +18,14 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@shadcn/ui": "^0.0.4",
     "@tanstack/react-query": "^5.76.0",
+    "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "ethers": "^6.13.4",
     "framer-motion": "^11.13.1",
     "gsap": "^3.12.5",
     "lucide-react": "^0.465.0",
+    "qs": "^6.14.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.6.0",
